apps/releases/03-core/raw/ghost/ghost-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ghost
  namespace: blog
spec:
  selector:
    app: ghost
  ports:
    - port: 80
      targetPort: 2368
