apps/releases/03-core/raw/ghost/mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ghost-mysql
  namespace: blog
spec:
  selector:
    app: ghost-mysql
  ports:
    - port: 3306
      targetPort: 3306
